Added in fortify library